--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,3 +11,8 @@
 	background-color: rgb(39 39 42);
 	border-radius: 0.375rem;
   }
+
+	@font-face {
+		font-family: Inter;
+		src: url(../../public/fonts/Inter.ttf);
+	}
